--- a/index.html
+++ b/index.html
@@ -499,6 +499,7 @@
             type="checkbox"
             name="policy"
           />
+          <span class="checkbox-icon"></span>
 
           <svg class="checked-icon">
             <use href="./images/symbol-defs.svg#icon-square"></use>
