--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
     </footer>
 
     <div class="backdrop is-hidden" data-modal>
-      <div class="modal" autocomplete="off">
+      <form class="modal" autocomplete="off">
         <h2 class="form-title">Zostaw swoje dane w formularzu poniżej</h2>
         <label class="modal-form-field">
           <span class="label-title">Imie</span>
@@ -499,10 +499,11 @@
             type="checkbox"
             name="policy"
           />
+
           <span class="checkbox-icon"></span>
 
           <svg class="checked-icon">
-            <use href="./images/symbol-defs.svg#icon-square"></use>
+            <use href="./images/symbol-defs.svg#icon-icon-check"></use>
           </svg>
           <span class="label-title">Oświadczam iż akceptuję</span>
           <a class="link" href="">Regulamin i Politykę Prywatności.</a>
@@ -519,7 +520,7 @@
             ></use>
           </svg>
         </button>
-      </div>
+      </form>
     </div>
     <script src="./js/modal.js"></script>
   </body>
